--- a/www/assets/css/style.css
+++ b/www/assets/css/style.css
@@ -4,6 +4,7 @@
     font-size: 16px;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
+    color: #eaebed;
 }
 
 body {
@@ -44,6 +45,7 @@ body {
 }
 
 .login form input[type="password"], .login form input[type="text"] {
+    color: black;
     width: 310px;
     height: 50px;
     border: 1px solid #dee0e4;
@@ -136,7 +138,7 @@ body.loggedin {
     box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.1);
     margin: 25px 0;
     padding: 25px;
-    background-color: #fff;
+    background-color: #2f3947;
 }
 
 .content > p table td, .content > div table td {
@@ -145,7 +147,7 @@ body.loggedin {
 
 .content > p table td:first-child, .content > div table td:first-child {
     font-weight: bold;
-    color: #4a536e;
+    background-color: #2f3947;
     padding-right: 15px;
 }
 
@@ -157,26 +159,43 @@ body.loggedin {
 .mp {
     float: left;
     width: 350px;
-    background: lightblue;
+    background-color: #2f3947;
     margin-left: 10px;
+}
+
+.mp section {
+    padding: 18px;
 }
 
 .tag {
     float: right;
     width: 250px;
-    background: burlywood;
+    background-color: #2f3947;
     overflow:visible;
     margin-right: 10px;
+}
+
+.tag section {
+    padding: 18px;
 }
 
 .main {
     margin-left: 380px;
     margin-right: 280px;
-    background: khaki;
+    background-color: #2f3947;
+}
+
+.main section {
+    padding: 18px;
 }
 
 .footer {
     background-color: #2f3947;
+    bottom: 0;
+}
+
+.footer footer {
+    padding: 18px;
 }
 
 .page {
