--- a/www/assets/css/style.css
+++ b/www/assets/css/style.css
@@ -62,7 +62,7 @@ body {
 .login {
     width: 400px;
     background-color: #ffffff;
-    box-shadow: 0 0 9px 0 rgba(0, 0, 0, 0.3);
+    box-shadow: 1px 1px 12px #838383;
     margin: 100px auto;
 }
 
@@ -145,7 +145,7 @@ body.loggedin {
     padding: 25px;
     margin-bottom: 25px;
     background-color: #2f3947;
-    box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.1);
+    box-shadow: 1px 1px 12px #707070;
 }
 
 .titre {
@@ -171,6 +171,10 @@ body.loggedin {
 
 .recherche {
 
+}
+
+.recherche input {
+    color: black;
 }
 
 .tendance {
