--- a/www/assets/css/style.css
+++ b/www/assets/css/style.css
@@ -141,11 +141,20 @@ body.loggedin {
     margin: auto;
 }
 
+.page input {
+    color: black;
+}
+
+.image {
+    height: 300px;
+}
+
 .page section {
     padding: 25px;
     margin-bottom: 25px;
     background-color: #2f3947;
     box-shadow: 1px 1px 12px #707070;
+
 }
 
 .titre {
@@ -173,10 +182,6 @@ body.loggedin {
 
 }
 
-.recherche input {
-    color: black;
-}
-
 .tendance {
 
 }
@@ -188,6 +193,30 @@ body.loggedin {
 .main {
     margin: auto;
     max-width: 1000px;
+}
+
+.reactions{
+    margin: 10px;
+    display: inline-flex;
+}
+
+.reactions div a {
+    text-decoration: none;
+}
+
+.icone_on img{
+    height: 30px;
+    margin-left: 20px;
+}
+
+.icone_off img{
+    opacity: 0.5;
+    height: 30px;
+    margin-left: 20px;
+}
+
+.inscription input {
+    color: black;
 }
 
 #scrollUp{
