--- a/www/assets/css/css.css
+++ b/www/assets/css/css.css
@@ -1,7 +1,8 @@
-f@import url("import.css");
+@import url("import.css");
 
 * {
     box-sizing: border-box;
+    font-family: -apple-system, BlinkMacSystemFont, "segoe ui", roboto, oxygen, ubuntu, cantarell, "fira sans", "droid sans", "helvetica neue", Arial, sans-serif;
     font-size: 16px;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
@@ -9,18 +10,18 @@ f@import url("import.css");
     text-decoration: none;
 }
 
-html {
-	font-family: -apple-system, BlinkMacSystemFont, "segoe ui", roboto, oxygen, ubuntu, cantarell, "fira sans", "droid sans", "helvetica neue", Arial, sans-serif;
-}
-
 img {
     width: 100%;
+}
+
+.image {
+    width: 300px;
+    border-radius: 25px;
 }
 
 .logo {
     width: auto;
     height: 60px;
-    /*display: none;*/
 }
 
 body {
@@ -63,16 +64,7 @@ i {
     display: flex;
     flex-direction: column;
     margin: 10%;
-    width: 90%;
-}
-
-.message, .tag, .footer, .nav, .pagination {
-	color: whitesmoke;
-	margin: 1%;
-}
-
-.date_mess {
-	padding: 1%;
+    width: 300px;
 }
 
 .div_messages, .centre {
@@ -80,34 +72,6 @@ i {
     display: flex;
     flex-direction: column;
     width: 50%;
-}
-
-.home {
-	text-decoration: none;
-	color: whitesmoke;
-    transition: all 0.25s ease-in-out;
-}
-
-.home:hover {
-	color: #2f3947;
-	background-color: whitesmoke;
-    transition: all 0.25s ease-in-out;
-}
-
-
-.paginationindex {
-	text-decoration: none;
-	color: whitesmoke;
-	font-size: 150%
-}
-
-.paginationindex a {
-	text-decoration: none;
-	color: #11d9f2;
-}
-
-.paginationindex a:hover {
-	color: whitesmoke;
 }
 
 .message, .param, .pagination {
@@ -122,8 +86,8 @@ i {
 .message_img_box {
     display: flex;
     justify-content: center;
-
-    padding: 50px;
+    background-color: whitesmoke;
+    padding: 10px;
     border-radius: 25px;
 }
 
@@ -150,10 +114,6 @@ form input[type=search] {
     border-radius: 10px;
 }
 
-form input[type=submit] {
-    /*display: none;*/
-}
-
 .tag_and_footer {
     order: 3;
     display: flex;
@@ -175,29 +135,6 @@ form input[type=submit] {
     margin: -30px -30px 1vh -30px;
     height: 80vh;
     border-radius: 25px;
-    padding: 5%;
-}
-
-.tag a {
-	text-decoration: none;
-	color: whitesmoke;
-}
-
-.tag a:hover {
-	color: #11d9f2;
-}
-
-.ecrire_msg {
-	text-decoration: none;
-	color: #11d9f2; 
-    transition: all 0.25s ease-in-out;
-}
-
-.ecrire_msg:hover {
-    background-color: #11d9f2;
-	color: #2f3947;
-    transition: all 0.25s ease-in-out;
-
 }
 
 .footer {
@@ -259,6 +196,17 @@ div.list_reaction {
     flex-direction: row;
 }
 
+.icone_on img{
+    height: 30px;
+    margin-left: 20px;
+}
+
+.icone_off img{
+    opacity: 0.5;
+    height: 30px;
+    margin-left: 20px;
+}
+
 .reaction {
     display: flex;
     flex-direction: row;
@@ -295,88 +243,3 @@ div.list_reaction {
     align-items: center;
     margin: 3%;
     border-radius: 25px;}
-
-.icone_on img{
-
-    height: 30px;
-    margin-left: 20px;
-}
-
-.icone_off img{
-    opacity: 0.5;
-    height: 30px;
-    margin-left: 20px;
-}
-
-.icone_off img:hover{
-    opacity: 1;
-}
-
-.bouton_modif {
-	padding: 1%;
-}
-
-@media screen and (max-device-width: 600px) {
-
-	body {
-    		display: flex;
-    		flex-direction: column;
-    		justify-content: space-around;
-    		background-image: url(../img/background/Background.jpg);
-    		background-attachment: fixed;
-	}
-
-	.logo {
-		width: 100%;
-		height: 100%;
-	}
-
-	.nav {
-		align-items: center;
-	}
-
-	.nav {
-		margin: 0;
-    		order: 1;
-    		display: flex;
-    		flex-direction: column;
-    		justify-content: flex-start;
-    		background-color: #2f3947;
-		height: 100%;
-		width: 95%;
-    		padding: 30px;
-    		margin-top: 2vh;
-    		border-radius: 25px;
-
-		/*          sticky           */
-    		position: sticky;
-    		top: 2vh;
-    		align-self: flex-start;
-		font-size: 300%;
-	}
-
-	.menu {
-    		display: flex;
-    		flex-direction: row;
-	}
-
-	nav.nav > div.menu > a {
-    		font-size: 100%;
-	}
-
-
-	.home {
-		text-decoration: none;
-		color: whitesmoke;
-    		transition: all 0.25s ease-in-out;
-	}
-
-	.div_messages, .centre {
-    		order: 2;
-    		display: flex;
-    		flex-direction: column;
-    		width: 100%;
-	}
-
-
-}
