--- a/www/assets/css/css.css
+++ b/www/assets/css/css.css
@@ -95,7 +95,7 @@ i {
 }
 
 
-.paginationindex {
+p.paginationindex {
 	text-decoration: none;
 	color: whitesmoke;
 	font-size: 150%
@@ -104,6 +104,7 @@ i {
 .paginationindex a {
 	text-decoration: none;
 	color: #11d9f2;
+	font-size: 150%
 }
 
 .paginationindex a:hover {
@@ -339,7 +340,7 @@ div.list_reaction {
     		justify-content: flex-start;
     		background-color: #2f3947;
 		height: 100%;
-		width: 95%;
+		width: 100%;
     		padding: 30px;
     		margin-top: 2vh;
     		border-radius: 25px;
@@ -383,14 +384,14 @@ div.list_reaction {
     		border-bottom: 1px solid #bfbfbf;
     		color: #4a536e;
     		text-align: center;
-    		width: 80%;
+    		width: 100%;
 	}
 
 	.message h2 {
 		font-size: 300%;
 	}
 
-	.message_text {
+	div.message_text > p{
 		font-size: 250%;
 	}
 
@@ -411,7 +412,6 @@ div.list_reaction {
     		display: flex;
     		flex-direction: column;
     		justify-content: flex-start;
-    		width: 20vw;
    		padding: 30px;
     		margin-top: 2vh;
 
@@ -419,13 +419,13 @@ div.list_reaction {
     		position: static;
     		top: 2vh;
     		align-self: flex-start;
-		width: 90%;
+		width: 105%;
+		height: 100%;
 		}
 
 	.tag {
     		background-color: #2f3947;
     		margin: -30px -30px 1vh -30px;
-    		height: 80vh;
     		border-radius: 25px;
     		padding: 5%;
 		width: 100%;
@@ -442,12 +442,12 @@ div.list_reaction {
 		display: none;
 	}
 
-	ol.list_tendance {
+	ol.list_tendance > li > a{
 		width: 50%;
 		font-size: 300%;
 	}
 
-	.tendance {
+	div.tendance > h3{
 		font-size: 300%;
 	}
 	
