--- a/www/assets/css/css.css
+++ b/www/assets/css/css.css
@@ -344,7 +344,7 @@ input#setting_text, input#settings_text {
 
 
 
-@media screen and (max-device-width: 600px) {
+@media screen and (max-width: 600px) {
 
     body {
         display: flex;
